Fixed landsapedscape orientation layout on mobile.

--- a/style.css
+++ b/style.css
@@ -65,10 +65,6 @@ body, h2 {
 
 @media (max-width: 440px) {
 
-  .navbar {
-    width: 100vw;
-  }
-
   .navbar-list {
     -ms-flex-pack: distribute;
     justify-content: space-around;
@@ -80,7 +76,6 @@ body, h2 {
 }
 
 .section {
-  height: calc(100vh - 50px);
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: column;
@@ -145,6 +140,12 @@ body, h2 {
   margin-bottom: 20px;
 }
 
+@media (max-width: 800px) {
+  .btn-scroll {
+    display: none;
+  }
+}
+
 .btn-scroll:hover{
   color: #f47d42;
 }
@@ -191,14 +192,17 @@ body, h2 {
   }
 }
 
-.skills-head {
-  font-size: 4em;
-  padding-top: 5vh;
-}
-
 .skills {
   background: #0c9;
   color: white;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .skills-wrapper {
@@ -212,6 +216,7 @@ body, h2 {
 
 .skills-list {
   list-style: none;
+  padding: 0;
 }
 
 .skill {
@@ -607,5 +612,15 @@ body, h2 {
     font-size: 1.6em;
     transform: scale(1, 2);
     padding: 3px;
+  }
+}
+
+@media (max-width: 900px) and (orientation: landscape) {
+  .section {
+    height: 170vh;
+  }
+
+  .contact-form {
+    height: 80vh;
   }
 }
